--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,15 @@
 <html>
 <head>
     <title>P Admin</title>
+    <link rel="stylesheet" href="/css/bundle.css" />
 </head>
 <body>
-<div id="app"></div>
+<div class="jumbotron">
+    <h1>Hello!</h1>
+</div>
+<div id="app">
+    <script src="scripts/bundle.js"></script>
+</div>
 </body>
 
 </html>
