--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,11 @@
 <html>
 <head>
     <title>P Admin</title>
-    <link rel="stylesheet" href="/css/bundle.css" />
+    <link rel="stylesheet" href="/css/bundle.css"/>
 </head>
 <body>
-<div class="jumbotron">
-    <h1>Hello!</h1>
-</div>
 <div id="app">
-    <script src="scripts/bundle.js"></script>
+    <script src="/scripts/bundle.js"></script>
 </div>
 </body>
 
